argo/gitops-book/blue-green/canary/blue-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blue
  labels:
    app: blue
spec:
  replicas: 0
  selector:
    matchLabels:
      app: blue
  template:
    metadata:
      labels:
        app: blue
    spec:
      containers:
        - image: argoproj/rollouts-demo:blue
          name: demo-blue
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: blue-service
  labels:
    app: blue
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  selector:
    app: blue
  type: NodePort
