argo/gitops-book/blue-green/canary/canary-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: canary-ingress
  # annotations:
  #   nginx.ingress.kubernetes.io/canary: "true"
  #   nginx.ingress.kubernetes.io/canary-weight: "100"
spec:
  defaultBackend:
    service:
      name: green-service
      port:
        number: 80
  rules:
    - host: "demo.info"
      http:
        paths:
          - backend:
              service:
                name: green-service
                port:
                  number: 80
            pathType: Prefix
            path: /
  ingressClassName: nginx
